<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/apply"
        android:showAsAction="always"
        android:title="@string/apply">
    </item>
    <item
        android:id="@+id/revert"
        android:showAsAction="always"
        android:title="@string/revert">
    </item>
    <item
        android:id="@+id/rate"
        android:showAsAction="never"
        android:title="@string/rate">
    </item>
    <item
        android:id="@+id/share"
        android:showAsAction="never"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/donate"
        android:showAsAction="never"
        android:title="@string/donate">
    </item>
    <item
        android:id="@+id/about"
        android:showAsAction="never"
        android:title="@string/about">
    </item>

</menu>